--- a/libs/sources/jmi/CMakeLists.txt
+++ b/libs/sources/jmi/CMakeLists.txt
@@ -1,4 +1,10 @@
 
+# 加入REQUIRED 参数,如果找不到JNI,就报错退出
+find_package(JNI REQUIRED)
+# 加入jni支持
+include_directories(${JAVA_INCLUDE_PATH})
+include_directories(${JAVA_INCLUDE_PATH2})
+
 get_filename_component(LIB_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 string(REPLACE " " "_" LIB_NAME ${LIB_NAME})
 
@@ -15,5 +21,4 @@ if (BUILD_SHARED_LIBS)
 endif ()
 
 add_library(lib${LIB_NAME} ${LIB_TYPE} ${${LIB_NAME}_SOURCE_CODE})
-
 set_target_properties(lib${LIB_NAME} PROPERTIES OUTPUT_NAME ${LIB_NAME})
