--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,10 @@ set(LIBS_OS_DIR ${LIBS_DIR}/${OS}/${ABI}/)
 set(LIBS_INCLUDE_DIR ${LIBS_DIR}/include/) 
 set(LIBS_SOURCES_DIR ${LIBS_DIR}/sources/) 
 
-set(FASTEST_FLAG "-Ofast -Os -Oz -fPIC")
+set(FASTEST_FLAG "-Ofast -Os -Oz ")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FASTEST_FLAG}")
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} ${FASTEST_FLAG} ")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} ${FASTEST_FLAG} -fPIC")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
 
 macro(add_dynamic_lib LIB_NAME)
@@ -113,11 +113,6 @@ add_library(
 # add_static_lib(libcrypto)
 # find_library(EGL-lib EGL)
 
-# if(NOT WIN32)
-#     find_library(PTHREAD-LIB pthread)
-#     target_link_libraries(${PROJECT_NAME} ${PTHREAD-LIB}) # linux
-# endif()
-
 include(FindThreads)
 
 target_link_add_static_lib_source(sigslot)
@@ -131,7 +126,7 @@ if(ANDROID)
 endif()
 
 target_link_add_moudle_lib(spdlog)
-#target_link_add_moudle_lib(srt)
+target_link_add_moudle_lib(srt)
 
 set(TEST_DIR ${CMAKE_SOURCE_DIR}/test/) 
 target_link_add_executable(Test_Push ${TEST_DIR}/test_push.cpp)
