--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "valarray": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     // "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
