--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,9 @@ set(LIBS_OS_DIR ${LIBS_DIR}/${OS}/${ABI}/)
 set(LIBS_INCLUDE_DIR ${LIBS_DIR}/include/) 
 set(LIBS_SOURCES_DIR ${LIBS_DIR}/sources/) 
 
-set(FASTEST_FLAG "-Ofast -Os -Oz ")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FASTEST_FLAG}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ")
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} ${FASTEST_FLAG} -fPIC")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD}  -fPIC")
 
 
 macro(add_dynamic_lib LIB_NAME)
