--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,12 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "unordered_set": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     // "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
